--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,21 @@
 <h1>New Project</h1>
+
 <%= form_for(@project) do |f| %>
+
+<% if @project.errors.any? %>
+ <div id="error_explanation">
+   <h2><%= pluralize(@project.errors.count, "error") %>
+   prohibited this project from being saved:</h2>
+
+   <ul>
+     <% @project.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+     <% end %>
+   </ul>
+ </div>
+<% end %>
+
+
   <p>
     <%= f.label :name %><br>
     <%= f.text_field :name %>
@@ -10,4 +26,7 @@
     <%= f.text_field :description %>
   </p>
   <%= f.submit %>
+
+  
+  
 <% end %>
