--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,7 @@
 <h1>New Project</h1>
 
+<%= render "form", project: @project %>
+
 <%= form_for(@project) do |f| %>
 
 <% if @project.errors.any? %>
