--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -4,5 +4,6 @@
     project_path(@project),
     method: :delete,
     data: { confirm: "Are you sure you want to delete this project?" }%>
+    <%= link_to "Index", root_path %> 
 <h1><%= @project.name %></h1>
 <p><%= @project.description %></p>
