--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,26 +1,9 @@
-<%= form_for(project) do |f| %>
-  <% if project.errors.any? %>
-   <div id="error_explanation">
-     <h2><%= pluralize(project.errors.count, "error") %>
-     prohibited this project from being saved:</h2>
+<%= simple_form_for(project) do |f| %>
 
-     <ul>
-       <% project.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-       <% end %>
-     </ul>
-   </div>
-  <% end %>
 
-  <p>
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </p>
+    <%= f.input :name %>
+    <%= f.input :description %>
 
-  <p>
-    <%= f.label :description %><br>
-    <%= f.text_field :description %>
-  </p>
+    <%= f.button :submit, class: "btn-primary" %>
 
-  <%= f.submit %>
 <% end %>
