--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,16 +1,19 @@
 <header>
-  <h1><%= @project.name %></h1>
+  <h2>Tickets</h2>
 
   <ul class="actions">
+    <li><%= link_to "New Ticket", new_project_ticket_path(@project),
+      class: "new" %></li>
 
-   <li><%= link_to "Edit Project", edit_project_path(@project),
+      <li><%= link_to "Edit Project", edit_project_path(@project),
     class: "edit" %></li>
 
   <li><%= link_to "Delete Project", project_path(@project),
      method: :delete,
      data: { confirm: "Are you sure you want to delete this project?" },
      class: "delete" %></li>
-   </ul>
+     
+  </ul>
 </header>
 
 
