--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -14,6 +14,15 @@
      class: "delete" %></li>
      
   </ul>
+    <ul id="tickets">
+    <% @project.tickets.each do |ticket| %>
+      <li>
+        #<%= ticket.id %> -
+        <%= link_to ticket.name, [@project, ticket] %>
+      </li>
+    <% end %>
+  </ul>                                                                                                                                                                                                                                                                           
+
 </header>
 
 
