--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -4,8 +4,13 @@
   </header>
 
   <header>
-    <h2><%= @ticket.name %></h2>
-  </header>
+  <h2><%= @ticket.name %></h2>
+
+  <ul class="actions">
+    <li><%= link_to "Edit Ticket", [:edit, @project, @ticket],
+      class: "edit" %></li>
+  </ul>
+</header>
 
   <%= simple_format(@ticket.description) %>
 </div>
