--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -12,6 +12,11 @@
   </ul>
 </header>
 
+<li><%= link_to "Delete Ticket", [@project, @ticket], method: :delete,
+  data: { confirm: "Are you sure you want to delete this ticket?"},
+  class: "delete" %></li> 
+
   <%= simple_format(@ticket.description) %>
+  
 </div>
  
