--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,9 @@
         <li class="<%= "active" if current_page?("/") %>">
           <%= link_to "Home", root_path %>
         </li>
+        <li class="<%= "active" if current_page?("/users/sign_up") %>">
+          <%= link_to "Sign up", new_user_registration_path %>
+        </li>
       </ul>
     </div>
   </div>
@@ -33,23 +36,23 @@
   <% else %>
     Ticketee
   <% end %>
-</title>
+  </title>
+
   <%= stylesheet_link_tag    'application', media: 'all',
     'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application',
     'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+
 <body>
+  <% flash.each do |key, message| %>
+    <div class="alert alert-<%= key %>">
+      <%= message %>
+    </div>
+  <% end %>
 
-<% flash.each do |key, message| %>
-  <div class="alert alert-<%= key %>">
-    <%= message %>
-  </div>
-<% end %>
-
-<%= yield %>
-
+  <%= yield %>
 </body>
 </html>
 
