--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,20 +13,11 @@
  *= require_tree .
  *= require_self
  */
-
- 
-
-
-
-
-
-
-
-
  @import "bootstrap-sprockets";
  @import "bootstrap"; 
  @import "font-awesome";
  @import "projects";
+ @import "tickets";
  @import "responsive";
 
  // Core variables and mixins
