--- a/app/assets/stylesheets/tickets.scss
+++ b/app/assets/stylesheets/tickets.scss
@@ -4,8 +4,8 @@
 
 
 #attributes {
-    @extend .table;
-    @extend .table-condensed;
+    @extend .table  !optional;
+    @extend .table-condensed !optional;
     width: 65%;
   
     th {
@@ -21,4 +21,4 @@
     td, th {
      line-height: 24px !important;
     }
-   }
+}
