Add admin namespace with application controller

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,6 +18,7 @@
  @import "font-awesome";
  @import "projects";
  @import "tickets";
+ @import "admin/application";
  @import "responsive";
 
  // Core variables and mixins
