--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -3,7 +3,7 @@
 
   <ul class="actions">
 
-   <%= link_to "New Project", new_project_path, class: "new" %>
+   <%= link_to "New Project", new_admin_project_path, class: "new" %>
 
   </ul>
 </header> 
@@ -13,4 +13,4 @@
     <h2><%= link_to project.name, project %></h2>
     <p><%= project.description %></p>
   <% end %>
-  </div>
+  </div>  
