--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,11 +1,11 @@
 <header>
   <h1>Projects</h1>
 
-  <ul class="actions">
-
-   <%= link_to "New Project", new_admin_project_path, class: "new" %>
-
-  </ul>
+  <% admins_only do%>
+    <ul class="actions">
+    <li> <%= link_to "New Project", new_admin_project_path, class: "new" %></li>
+    </ul>
+  <% end %>
 </header> 
 
 <div id="projects">
