--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -8,11 +8,12 @@
       <li><%= link_to "Edit Project", edit_project_path(@project),
     class: "edit" %></li>
 
+<% admins_only do %>
   <li><%= link_to "Delete Project", admin_project_path(@project),
      method: :delete,
      data: { confirm: "Are you sure you want to delete this project?" },
      class: "delete" %></li>
-     
+<% end %>     
   </ul>
     <ul id="tickets">
     <% @project.tickets.each do |ticket| %>
