--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -5,15 +5,17 @@
     <li><%= link_to "New Ticket", new_project_ticket_path(@project),
       class: "new" %></li>
 
-      <li><%= link_to "Edit Project", edit_project_path(@project),
+  <% if policy(@project).update? %>
+    <li><%= link_to "Edit Project", edit_project_path(@project),
     class: "edit" %></li>
-
-<% admins_only do %>
-  <li><%= link_to "Delete Project", admin_project_path(@project),
-     method: :delete,
-     data: { confirm: "Are you sure you want to delete this project?" },
-     class: "delete" %></li>
-<% end %>     
+  <% end %> 
+  
+  <% admins_only do %>
+    <li><%= link_to "Delete Project", admin_project_path(@project),
+       method: :delete,
+       data: { confirm: "Are you sure you want to delete this project?" },
+       class: "delete" %></li>
+  <% end %>     
   </ul>
     <ul id="tickets">
     <% @project.tickets.each do |ticket| %>
