Hide the New Ticket link when the user can't create tickets on the project

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,8 +2,10 @@
   <h2>Tickets</h2>
 
   <ul class="actions">
+  <% if policy(Ticket.new(project: @project)).create? %>
     <li><%= link_to "New Ticket", new_project_ticket_path(@project),
       class: "new" %></li>
+  <% end %>
 
   <% if policy(@project).update? %>
     <li><%= link_to "Edit Project", edit_project_path(@project),
@@ -17,11 +19,11 @@
        class: "delete" %></li>
   <% end %>     
   </ul>
-    <ul id="tickets">
+  <ul id="tickets">
     <% @project.tickets.each do |ticket| %>
       <li>
-        #<%= ticket.id %> -
-        <%= link_to ticket.name, [@project, ticket] %>
+      #<%= ticket.id %> -
+      <%= link_to ticket.name, [@project, ticket] %>
       </li>
     <% end %>
   </ul>                                                                                                                                                                                                                                                                           
