--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -1,31 +1,30 @@
 <div id="ticket">
   <header>
     <h1><%= @project.name %></h1>
+    <h2><%= @ticket.name %></h2>
   </header>
 
-  <header>
-  <h2><%= @ticket.name %></h2>
-
   <ul class="actions">
-    <li><%= link_to "Edit Ticket", [:edit, @project, @ticket],
+    <% if policy(@ticket).update? %>
+      <li><%= link_to "Edit Ticket", [:edit, @project, @ticket],
       class: "edit" %></li>
+    <% end %>
+
+    <li><%= link_to "Delete Ticket", [@project, @ticket], method: :delete,
+    data: { confirm: "Are you sure you want to delete this ticket?"},
+    class: "delete" %></li> 
   </ul>
- </header>
 
- <table id="attributes">
-   <tr>
-     <th>Author:</th>
-     <td><%= @ticket.author.email %></td>
-   </tr>
-   <tr>
-     <th>Created:</th>
-     <td><%= time_ago_in_words(@ticket.created_at) %> ago</td>
-   </tr>
+  <table id="attributes">
+    <tr>
+      <th>Author:</th>
+      <td><%= @ticket.author.email %></td>
+    </tr>
+    <tr>
+      <th>Created:</th>
+      <td><%= time_ago_in_words(@ticket.created_at) %> ago</td>
+    </tr>
  </table>
-
-<li><%= link_to "Delete Ticket", [@project, @ticket], method: :delete,
-  data: { confirm: "Are you sure you want to delete this ticket?"},
-  class: "delete" %></li> 
 
   <%= simple_format(@ticket.description) %>
   
