Adding Active model serializer

--- a/app/assets/stylesheets/admin/users.scss
+++ b/app/assets/stylesheets/admin/users.scss
@@ -2,6 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+/*
 .roles {
   @extend .table;
   @extend .form-horizontal;
@@ -20,3 +21,4 @@
     @extend .form-control;
   }
 }
+*/
